<resources>
    <string name="app_name">Navigation</string>
    <string name="my_account">My Account</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="person">person</string>
    <string name="persons">Person</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>