<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
       android:title="@string/my_account">
        <menu>
            <item
               android:id="@+id/home"
                android:title="@string/home"
                android:icon="@drawable/ic_baseline_home_24"
                />
            <item
                android:id="@+id/notification"
                android:title="@string/notification"
                android:icon="@drawable/ic_notifications"/>
            <item
                android:id="@+id/setting"
                android:title="@string/setting"
                android:icon="@drawable/ic_settings"/>
            <item
                android:id="@+id/person"
                android:title="@string/persons"
                android:icon="@drawable/ic_person"/>
        </menu>

    </item>

</menu>